Trying to add OpenSSL 1.1.0 to test matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,13 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+env:
+  UPGRADE_OPENSSL=false
+  UPGRADE_OPENSSL=true
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - ./maybe_upgrade_openssl.bash
 # command to run tests
 script:
   # Show openssl version
