--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,22 @@
 language: python
-python:
-  - "3.4"
-  - "3.5"
-  - "3.6"
-env:
-  UPGRADE_OPENSSL=false
-  UPGRADE_OPENSSL=true
-# command to install dependencies
+dist: trusty
+sudo: required
+matrix:
+  include:
+    - python: "3.4"
+      env: UPGRADE_OPENSSL=false
+    - python: "3.5"
+      env: UPGRADE_OPENSSL=false
+    - python: "3.6"
+      env: UPGRADE_OPENSSL=false
+    - python: "3.6"
+      env: UPGRADE_OPENSSL=true
+  # command to install dependencies
 install:
   - pip install -r requirements.txt
   - ./maybe_upgrade_openssl.bash
 # command to run tests
 script:
-  # Show openssl version
-  - openssl version
   # Run tests
   - python tests/test_ca.py Test.test_create_ca_utf8
   - make test
