--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,18 @@
+language: python
 dist: trusty
-sudo: required
-matrix:
-  include:
-    - python: "3.4"
-      env: UPGRADE_OPENSSL=false
-    - python: "3.5"
-      env: UPGRADE_OPENSSL=false
-    - python: "3.6"
-      env: UPGRADE_OPENSSL=false
-    - python: "3.6"
-      env: UPGRADE_OPENSSL=true
+python:
+  - "3.4"
+  - "3.5"
+  - "3.6"
   # command to install dependencies
 install:
   - pip install -r requirements.txt
-  - ./maybe_upgrade_openssl.bash
+  - ./download_openssl.bash
 # command to run tests
 script:
   # Run tests
-  - python tests/test_ca.py Test.test_create_ca_utf8
   - make test
+  # Run tests with openssl 1.1.0
+  - source ./openssl1.1.0.bash && make test
 notifications:
   email: false
